# aikon

./: README.md  REPOSITORY_STRUCTURE.md  compose.yml  cz.toml  docker-compose.yml
.github/workflows/: backend-cd.yml  frontend-cd.yml  release.yml
backend/: .env  .env.example  Dockerfile  cloudbuild.yaml  dev.Dockerfile  pyproject.toml  vercel.json
backend/app/: main.py
backend/tests/: test_main.py
docs/: 00_overview.md  01_requirements.md  02_tech_stack.md  03_system_design.md  04_development_plan.md  05_coding_guidelines.md  06_setup_guide.md
frontend/: .env  .env.example  .eslintrc.json  index.html  jest.config.cjs  package-lock.json  package.json  tsconfig.jest.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  firebaseConfig.ts  index.css  index.tsx
frontend/src/components/: DarkModeToggle.tsx  FileUpload.tsx  FirebaseLogin.tsx  GenerateIllustration.test.tsx  GenerateIllustration.tsx
