[tool.poetry]
name = "aikon-backend"
version = "0.1.0"
description = "Aikon FastAPI backend"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.110"
uvicorn = "^0.29"
python-multipart = "^0.0.20"
replicate = "^1.0.7"
rembg = "^2.0.66"
onnxruntime = "^1.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

