[project]
name = "aikon-backend"
version = "0.1.0"
description = "aikon FastAPI backend"
authors = [
    { name = "Yuki ASAKA", email = "your.email@example.com" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi[standard]>=0.112.2",
    "python-multipart>=0.0.20",
    "replicate>=1.0.7",
    "rembg>=2.0.66",
    "onnxruntime>=1.22.0",
]

[tool.uv]
managed = true
dev-dependencies = [
    "fastapi-cli>=0.0.5",
    "black>=25.1.0",
    "ruff>=0.11.12",
    "pytest>=8.3.5",
]

[tool.black]
line-length = 120
target-version = ['py312']
skip-string-normalization = false

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
  "backend/pyproject.toml:version"
]
tag_format = "v$version"
